# max-gimp-plugin

./: .cproject  .project  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
src/: CMakeLists.txt  file-max.c  file-max.h  palette.h
